--- a/podfile
+++ b/podfile
@@ -1,5 +1,5 @@
 platform :ios, ‘9.0’
-target ‘FBG’ do
+target ‘Wallet’ do
 use_frameworks!
 pod 'AFNetworking', '~> 3.1.0'
 pod 'MBProgressHUD', '~> 1.0.0'
